# space-invaders-game-assignment

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
SpaceInvaders/: .gitignore  makefile.sdl
SpaceInvaders/code/: CMakeLists.txt
SpaceInvaders/code/libs/: CMakeLists.txt
SpaceInvaders/code/libs/AppEvents/: CMakeLists.txt
SpaceInvaders/code/libs/AppEvents/include/AppEvents/: Enum.h  Events.h
SpaceInvaders/code/libs/GameGraphics/include/Game/Graphics/: TextRenderer.h
SpaceInvaders/code/libs/GameGraphics/source/Game/Graphics/: SpriteAtlas.cpp  TextRenderer.cpp
SpaceInvaders/code/libs/Graphics/include/Graphics/: BasicTextRenderer-inl.h  BasicTextRenderer.h
SpaceInvaders/code/libs/Graphics/source/Graphics/: SpriteAtlasConfig.cpp
SpaceInvaders/code/libs/SDLSupport/include/SDL/Policy/: Initialization.h
SpaceInvaders/code/libs/SDLSupport/source/SDL/: Window.cpp  Window.h
SpaceInvaders/code/libs/SDLSupport/source/SDL/Policy/: Initialization.cpp
SpaceInvaders/code/libs/SpaceInvadersEngine/: CMakeLists.txt
SpaceInvaders/code/libs/SpaceInvadersEngine/include/Game/LegacyEngine/: SpaceInvadersEngine.h
SpaceInvaders/code/libs/SpaceInvadersEngine/source/Game/Base/Assets/: Textures.cpp
SpaceInvaders/code/libs/SpaceInvadersEngine/source/Game/LegacyEngine/: SDLEngine.cpp  SDLEngine.h  SpaceInvadersEngine.cpp
SpaceInvaders/code/source/: SpaceInvaders.cpp
SpaceInvaders/code/source/Basic/: StateBase.h  StateMachine.h  string.cpp  string.h
SpaceInvaders/code/source/Graphics/: SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h
SpaceInvaders/code/source/LegacyEngine/: SDLEngine.cpp  SDLEngine.h  SpaceInvadersEngine.cpp
SpaceInvaders/code/source/Math/: Vec2f.h
SpaceInvaders/code/source/Platform/: Display.cpp  Display.h  Input.cpp  Input.h
SpaceInvaders/code/source/SpaceInvaders/: Game.cpp  Game.h  GameContext.h  GameState.h  Types.h
SpaceInvaders/code/source/SpaceInvaders/Entities/: RenderableState.h  UpdatableState.h
SpaceInvaders/code/source/SpaceInvaders/Entities/Bomb/: Bomb.cpp  Bomb.h
SpaceInvaders/code/source/SpaceInvaders/Entities/Invader/: Invader.cpp  Invader.h  InvaderState.h
SpaceInvaders/code/source/SpaceInvaders/Entities/Invader/States/: AliveState.cpp  AliveState.h  DeadState.cpp  DeadState.h
SpaceInvaders/code/source/SpaceInvaders/Entities/InvadersFleet/: BombDelegate.cpp  BombDelegate.h  InvadersFleet.cpp  InvadersFleet.h  InvadersFleetState.h
SpaceInvaders/code/source/SpaceInvaders/Entities/InvadersFleet/CollisionDetection/: BottomUpStrategy.h  GridLayoutStrategy.h
SpaceInvaders/code/source/SpaceInvaders/Entities/InvadersFleet/States/: HorizontalMovementState.cpp  HorizontalMovementState.h  MovementStateBase.cpp  MovementStateBase.h  VerticalMovementState.cpp  VerticalMovementState.h
SpaceInvaders/code/source/SpaceInvaders/Entities/Rocket/: Rocket.cpp  Rocket.h
SpaceInvaders/code/source/SpaceInvaders/Entities/Ship/: Ship.cpp  Ship.h  ShipState.h
SpaceInvaders/code/source/SpaceInvaders/Entities/Ship/States/: ReadyToFireShipState.cpp  ReadyToFireShipState.h  RechargingFireState.cpp  RechargingFireState.h
SpaceInvaders/code/source/SpaceInvaders/Scenes/: ActionPhase.cpp  ActionPhase.h  GameOver.cpp  GameOver.h  Intro.cpp  Intro.h  StageCleared.cpp  StageCleared.h
SpaceInvaders/code/source/SpaceInvaders/States/: ActionPhaseGameState.cpp  ActionPhaseGameState.h  GameOverGameState.cpp  GameOverGameState.h  IntroGameState.cpp  IntroGameState.h  StageClearedGameState.cpp  StageClearedGameState.h
SpaceInvaders/code/source/Utils/: Stopwatch.cpp  Stopwatch.h  Types.h
app/assets/sprites/: invaders-64.sprites
scripts/: README.md
scripts/cmd/: CreateAndStartProject.bat  GenerateVSSolution.bat
scripts/proj-nmake/: GenNMakefile.bat  GenNMakefile.py
